turnip/a660: dEQP-VK.spirv_assembly.instruction.terminate_invocation.terminate.subgroup_ballot failure due to "movmsk" reordered with "kill"
It seems that movmsk
produced from ballot(true)
could be reordered with kill
in ir3_sched
.
This causes the failure of dEQP-VK.spirv_assembly.instruction.terminate_invocation.terminate.subgroup_ballot
on a660.
Looking at ir3_sched
I'm not sure how to prevent this.